monitoring/loki-stack/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-gateway
  namespace: loki-stack
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: loki-gateway
