monitoring/loki-stack/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: loki-stack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stg
    cert-manager.io/common-name: loki.isandeshsol.com
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: loki.isandeshsol.com
      http:
        paths:
          - path: /
            pathType: PathPrefix
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
  tls:
    - hosts:
        - loki.isandeshsol.com
      secretName: loki-tls
